[package]
name = "cobitis-esp32c3"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.90"
publish = false

[[bin]]
name = "cobitis-esp32c3"
# do not use the built in cargo test harness -> resolve rust-analyzer errors
harness = false

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
# Symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
ads1x1x = "0.3.0"
anyhow = "1.0.101"
chrono = "0.4.43"
chrono-tz = "0.10.4"
ds18b20 = { git = "https://github.com/tsauvajon/ds18b20.git", branch = "master" }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-svc = "0.28.1"
esp-idf-svc = "0.51.0"
futures = "0.3.32"
heapless = "0.9.2"
log = "0.4.29"
nb = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sh1106 = { git = "https://github.com/techmccat/sh1106.git", branch = "hal-1" }
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }

[build-dependencies]
embuild = "0.33.1"
